--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -61,6 +61,7 @@
 	border-radius: 100rem;
 	font-size: 1.1rem;
 	box-sizing: border-box;
+	color: #000;
 	box-shadow: 0px 0px 3.6px rgba(0, 0, 0, 0.087), 0px 0px 10px rgba(0, 0, 0, 0.125),
 		0px 0px 24.1px rgba(0, 0, 0, 0.163), 0px 0px 80px rgba(0, 0, 0, 0.25);
 	border: 1px solid #fff;
